kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sync-service

spec:
  selector:
    app: sync-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
